# metal

./: .gitignore  .showcase.yml  Makefile  README.md  REAMDE.md
.github/workflows/: ci.yml
core/arty/: .gitignore  Makefile  arty_a7_35t.xdc  flow.json  init.sh
core/cpu/: .gitignore  Makefile  build.sbt
core/cpu/hardware/metal/: Config.scala  MetalVerilog.scala  top.scala
core/cpu/hardware/metal/utils/: Bin.scala
core/cpu/hardware/vexriscv/: README.md
core/cpu/hardware/vexriscv/demo/: Murax.scala
core/lib/: Cargo.toml
core/lib/metal/: Cargo.toml
core/lib/metal-build/: Cargo.toml
core/lib/metal-build/src/: config.rs  error.rs  fs.rs  lib.rs  processor.rs
core/lib/metal-std/: Cargo.toml
core/lib/metal-std/src/: gpio.rs  i2c.rs  lib.rs
core/lib/metal/src/: lib.rs
demo/bare/: Cargo.toml  Makefile.toml  build.rs
demo/bare/src/: app.rs  leds.rs  main.rs  utils.rs
demo/empty/: Cargo.toml  Makefile.toml
demo/empty/src/: app.rs
demo/hello-world-asm/: Makefile  hello-world.s
demo/loop-asm/: Makefile  loop.s
demo/wheely/app/: Cargo.toml  Makefile.toml  build.rs
demo/wheely/app/src/: app.rs
demo/wheely/pico_poc_fw/: PID.cpp  PID.h  acc_acq.h  pico_poc_fw.ino
demo/wheely/poc_pico_fw/: CMakeLists.txt
demo/wheely/poc_pico_fw/app/src/: main.cpp
